# libfixmath

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  library.json
.github/workflows/: cmake.yml
benchmarks/: Makefile  benchmark.c  generate_testcases.py  interface-arm.c  interface-avr.c  interface.c  interface.h  results-avr.ods
contrib/: fix16_fft.c
fixsingen/: main.c
fixtest/: fixtest.cbp  fixtest.depend  fixtest.layout  hiclock.c  main.c
images/: error_analysis.ods
libfixmath/: code_style.txt  fix16.c  fix16.h  fix16.hpp  fix16_exp.c  fix16_fft.c  fix16_sqrt.c  fix16_str.c  fix16_trig.c  fix16_trig_sin_lut.h  fixmath.h  fract32.c  fract32.h  int64.h  libfixmath.cbp  libfixmath.cmake  uint32.c  uint32.h
tests/: run_tests  tests.c  tests.cmake  tests.h  tests_basic.c  tests_basic.h  tests_lerp.c  tests_lerp.h  tests_macros.c  tests_macros.h  tests_sqrt.c  tests_sqrt.h  tests_str.c  tests_str.h  tests_trig.c  tests_trig.h
tests/tests/: tests.c  tests.h  tests_basic.c  tests_sqrt.c
trunk/benchmarks/: benchmark.c  interface-arm.c
trunk/contrib/: fix16_fft.c
trunk/fixsingen/: fixsingen.cbp  fixsingen.depend  main.c
trunk/fixtest/: fixtest.depend  hiclock.h  main.c
trunk/images/: error_analysis.ods
trunk/libfixmath/: Makefile  code_style.txt  fix16.c  fix16.h  fix16.hpp  fix16_exp.c  fix16_sqrt.c  fix16_trig.c  fix16_trig_sin_lut.h  fixmath.h  fract32.c  fract32.h  int64.h  libfixmath.cbp
trunk/unittests/: Makefile  fix16_exp_unittests.c  fix16_macros_unittests.c  fix16_str_unittests.c  fix16_unittests.c  unittests.h
unittests/: Makefile  fix16_exp_unittests.c  fix16_macros_unittests.c  fix16_str_unittests.c  fix16_unittests.c  run_unittests.sh
